--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,27 +4,26 @@ pipeline {
         jdk 'Java17'
         maven 'Maven3'
     }
-    stages{
-        stage("Cleanup Workspace"){
-                steps {
+    stages {
+        stage("Cleanup Workspace") {
+            steps {
                 cleanWs()
-                }
+            }
         }
-        stage("Checkout from SCM"){
-                steps {
-                    git branch: 'main', credentialsId: 'github', url: 'https://github.com/faasilkunju/faasilkunju/new/master/tests'
-                }
+        stage("Checkout from SCM") {
+            steps {
+                git branch: 'main', credentialsId: 'github', url: 'https://github.com/faasilkunju/faasilkunju.git'
+            }
         }
-        stage("Build Application"){
+        stage("Build Application") {
             steps {
                 sh "mvn clean package"
             }
-
-       }
-
-       stage("Test Application"){
-           steps {
-                 sh "mvn test"
-           }
-       }
-
+        }
+        stage("Test Application") {
+            steps {
+                sh "mvn test"
+            }
+        }
+    }
+}
