--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,19 +1,14 @@
 pipeline {
     agent { label 'Jenkins-Agent' }
 
-    tools {
-        nodejs 'NodeJS16' // Make sure this matches the NodeJS installation in Jenkins
-    }
-
     environment {
-        NODE_ENV = 'production' // Optional: set environment variables if needed
+        NODE_HOME = tool name: 'NodeJS16', type: 'NodeJS'
+        PATH = "${env.NODE_HOME}/bin:${env.PATH}"
     }
 
     stages {
         stage("Cleanup Workspace") {
-            steps {
-                cleanWs()
-            }
+            steps { cleanWs() }
         }
 
         stage("Checkout from SCM") {
@@ -25,41 +20,25 @@ pipeline {
         }
 
         stage("Install Dependencies") {
-            steps {
-                sh 'npm install'
-            }
+            steps { sh 'npm install' }
         }
 
         stage("Run Tests") {
-            steps {
-                sh 'npm test'
-            }
+            steps { sh 'npm test' }
         }
 
         stage("Build Application") {
-            steps {
-                // Only run if your package.json has a "build" script
-                sh 'npm run build || echo "No build script defined"'
-            }
+            steps { sh 'npm run build || echo "No build script defined"' }
         }
 
         stage("Start Application") {
-            steps {
-                sh './scripts/start_server' // Start your Node.js app using your script
-            }
+            steps { sh './scripts/start_server' }
         }
     }
 
     post {
-        always {
-            echo "Cleaning workspace after build..."
-            cleanWs()
-        }
-        success {
-            echo "Build, Test, and Deployment completed successfully!"
-        }
-        failure {
-            echo "Build or Test failed. Check logs!"
-        }
+        always { cleanWs() }
+        success { echo "Build completed successfully!" }
+        failure { echo "Build failed!" }
     }
 }
