--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,14 +1,19 @@
 pipeline {
     agent { label 'Jenkins-Agent' }
 
+    tools {
+        nodejs 'NodeJS16'  // Use tools directive instead of environment for tool setup
+    }
+
     environment {
-        NODE_HOME = tool name: 'NodeJS16', type: 'NodeJS'
-        PATH = "${env.NODE_HOME}/bin:${env.PATH}"
+        PATH = "${tool 'NodeJS16'}/bin:${env.PATH}"
     }
 
     stages {
         stage("Cleanup Workspace") {
-            steps { cleanWs() }
+            steps { 
+                cleanWs() 
+            }
         }
 
         stage("Checkout from SCM") {
@@ -20,25 +25,39 @@ pipeline {
         }
 
         stage("Install Dependencies") {
-            steps { sh 'npm install' }
+            steps { 
+                sh 'npm install' 
+            }
         }
 
         stage("Run Tests") {
-            steps { sh 'npm test' }
+            steps { 
+                sh 'npm test' 
+            }
         }
 
         stage("Build Application") {
-            steps { sh 'npm run build || echo "No build script defined"' }
+            steps { 
+                sh 'npm run build || echo "No build script defined"' 
+            }
         }
 
         stage("Start Application") {
-            steps { sh './scripts/start_server' }
+            steps { 
+                sh './scripts/start_server' 
+            }
         }
     }
 
     post {
-        always { cleanWs() }
-        success { echo "Build completed successfully!" }
-        failure { echo "Build failed!" }
+        always { 
+            cleanWs() 
+        }
+        success { 
+            echo "Build completed successfully!" 
+        }
+        failure { 
+            echo "Build failed!" 
+        }
     }
 }
