--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
 
         stage("Run Tests") {
             steps { 
-                sh 'PORT=3001 npm test'  // CHANGED: Added PORT=3001 for tests
+                sh 'npm test' 
             }
         }
 
@@ -58,15 +58,15 @@ pipeline {
         stage("Start Application") {
             steps {
                 script {
-                    // Fix the start_server script first - CHANGED to use port 3001
+                    // Fix the start_server script first
                     sh '''#!/bin/bash
                         # Create a fixed start_server script
                         cat > scripts/start_server_fixed << 'EOF'
 #!/bin/bash
-# Start the Node.js application using forever on port 3001
-echo "Starting Node.js application from: $(pwd) on port 3001"
-PORT=3001 forever start app.js
-echo "Application started with forever on port 3001"
+# Start the Node.js application using forever
+echo "Starting Node.js application from: $(pwd)"
+forever start app.js
+echo "Application started with forever"
 EOF
                         chmod +x scripts/start_server_fixed
                     '''
@@ -75,13 +75,13 @@ EOF
                     sh 'chmod +x scripts/start_server || echo "Cannot make original start_server executable"'
                     sh 'ls -la scripts/'
                     
-                    // Start server using the fixed script on port 3001
+                    // Start server using the fixed script
                     sh './scripts/start_server_fixed'
                     sh 'sleep 5'  // Give server time to start
                     
-                    // Check if server is running on port 3001 - CHANGED
+                    // Check if server is running
                     sh 'ps aux | grep node | grep -v grep || echo "No node processes found"'
-                    sh 'netstat -tulpn | grep :3001 || echo "Port 3001 not listening"'  // CHANGED: 3000 → 3001
+                    sh 'netstat -tulpn | grep :3000 || echo "Port 3000 not listening"'
                     sh 'forever list || echo "Forever not available"'
                 }
             }
@@ -90,9 +90,9 @@ EOF
         stage("Test Application") {
             steps {
                 script {
-                    // Test if the application is responding on port 3001 - CHANGED
-                    sh 'curl -f http://localhost:3001/ || echo "Application not responding on port 3001"'  // CHANGED: 3000 → 3001
-                    sh 'curl http://localhost:3001/ | head -n 5 || echo "Cannot fetch application content"'  // CHANGED: 3000 → 3001
+                    // Test if the application is responding
+                    sh 'curl -f http://localhost:3000/ || echo "Application not responding on port 3000"'
+                    sh 'curl http://localhost:3000/ | head -n 5 || echo "Cannot fetch application content"'
                 }
             }
         }
