--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,44 +16,21 @@ pipeline {
             }
         }
 
-        stage("Check Tools Availability") {
+        stage("Setup Environment") {
             steps {
                 script {
-                    echo "🔍 Checking available tools on the agent..."
-                    
-                    // Check if Maven is installed
-                    def mavenInstalled = false
-                    try {
-                        def mavenVersion = sh(script: 'mvn --version', returnStdout: true).trim()
-                        echo "✅ Maven is installed: ${mavenVersion}"
-                        mavenInstalled = true
-                    } catch (Exception e) {
-                        echo "❌ Maven is NOT installed"
-                    }
-                    
-                    // Check if SonarScanner is installed
-                    def sonarScannerInstalled = false
-                    try {
-                        def scannerVersion = sh(script: 'sonar-scanner --version', returnStdout: true).trim()
-                        echo "✅ SonarScanner is installed: ${scannerVersion}"
-                        sonarScannerInstalled = true
-                    } catch (Exception e) {
-                        echo "❌ SonarScanner is NOT installed"
-                    }
-                    
-                    // Store the results for later stages
-                    env.MAVEN_AVAILABLE = mavenInstalled.toString()
-                    env.SONARSCANNER_AVAILABLE = sonarScannerInstalled.toString()
-                    
-                    // Diagnostic info
                     sh '''
-                        echo "=== Tool Locations ==="
-                        which mvn || echo "mvn: not found"
-                        which sonar-scanner || echo "sonar-scanner: not found"
-                        which npm || echo "npm: not found"
-                        which node || echo "node: not found"
-                        echo "=== Java Info ==="
-                        java -version 2>&1 | head -3 || echo "java: not found"
+                        # Set JAVA_HOME for this pipeline
+                        export JAVA_HOME=/usr/lib/jvm/java-21-openjdk
+                        export PATH=$JAVA_HOME/bin:$PATH
+                        echo "JAVA_HOME set to: $JAVA_HOME"
+                        
+                        # Verify tools
+                        echo "=== Verifying Tools ==="
+                        java -version
+                        mvn --version || echo "Maven not working - but continuing"
+                        node --version
+                        npm --version
                     '''
                 }
             }
@@ -101,8 +78,36 @@ pipeline {
         stage("SonarQube Analysis"){
             steps {
                 script {
+                    // Install SonarScanner automatically
+                    sh '''
+                        echo "📥 Setting up SonarScanner..."
+                        if ! command -v sonar-scanner &> /dev/null; then
+                            echo "Installing SonarScanner..."
+                            wget -q https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
+                            unzip -q sonar-scanner-cli-4.8.0.2856-linux.zip
+                            export PATH=$PWD/sonar-scanner-4.8.0.2856-linux/bin:$PATH
+                            echo "✅ SonarScanner installed successfully"
+                        else
+                            echo "✅ SonarScanner is already installed"
+                        fi
+                        
+                        # Verify SonarScanner
+                        sonar-scanner --version || echo "SonarScanner verification failed"
+                    '''
+                    
                     withSonarQubeEnv(credentialsId: 'Sonarqube') { 
-                        sh "mvn sonar:sonar"
+                        sh """
+                            echo "🚀 Starting SonarQube analysis..."
+                            sonar-scanner \\
+                            -Dsonar.projectKey=register-app \\
+                            -Dsonar.sources=. \\
+                            -Dsonar.host.url=\\$SONAR_HOST_URL \\
+                            -Dsonar.login=\\$SONAR_AUTH_TOKEN \\
+                            -Dsonar.coverage.exclusions=**/node_modules/**,**/tests/** \\
+                            -Dsonar.exclusions=**/node_modules/**,**/.*/** \\
+                            -Dsonar.projectName="Register App" \\
+                            -Dsonar.projectVersion=1.0
+                        """
                     }
                 }	
             }
