--- a/jenkinsfile
+++ b/jenkinsfile
@@ -115,6 +115,14 @@ pipeline {
             }
         }
 
+        stage("Quality Gate"){
+            steps {
+                script {
+                    waitForQualityGate abortPipeline: false, credentialsId: 'jenkins-sonarqube-token'
+                }	
+            }
+        }
+
         stage("Start Application") {
             steps {
                 script {
