--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,9 +4,7 @@ pipeline {
     environment {
         APP_NAME = "register-app-pipeline"
         RELEASE = "1.0.0"
-        DOCKER_USER = "fazilkunju"
-        DOCKER_PASS = 'dockerhub'
-        IMAGE_NAME = "${DOCKER_USER}" + "/" + "${APP_NAME}"
+        IMAGE_NAME = "fazilkunju/${APP_NAME}"
         IMAGE_TAG = "${RELEASE}-${BUILD_NUMBER}"
     }
 
@@ -132,24 +130,45 @@ pipeline {
             }
         }
 
+        stage("Test Docker Credentials") {
+            steps {
+                script {
+                    withCredentials([usernamePassword(
+                        credentialsId: 'dockerhub',
+                        usernameVariable: 'DOCKER_USER',
+                        passwordVariable: 'DOCKER_PASS'
+                    )]) {
+                        sh '''
+                            echo "Testing Docker login..."
+                            docker login -u $DOCKER_USER -p $DOCKER_PASS
+                            echo "✅ Docker login successful!"
+                        '''
+                    }
+                }
+            }
+        }
+
         stage("Build & Push Docker Image") {
             steps {
                 script {
-                    // Check if Dockerfile exists
                     if (fileExists('Dockerfile')) {
                         echo "🚀 Building Docker image..."
-                        docker.withRegistry('', DOCKER_PASS) {
-                            docker_image = docker.build "${IMAGE_NAME}"
-                        }
-
-                        docker.withRegistry('', DOCKER_PASS) {
-                            docker_image.push("${IMAGE_TAG}")
-                            docker_image.push('latest')
+                        
+                        withCredentials([usernamePassword(
+                            credentialsId: 'dockerhub',
+                            usernameVariable: 'DOCKER_USER',
+                            passwordVariable: 'DOCKER_PASS'
+                        )]) {
+                            sh """
+                                docker login -u $DOCKER_USER -p $DOCKER_PASS
+                                docker build -t ${IMAGE_NAME}:${IMAGE_TAG} -t ${IMAGE_NAME}:latest .
+                                docker push ${IMAGE_NAME}:${IMAGE_TAG}
+                                docker push ${IMAGE_NAME}:latest
+                            """
                         }
                         echo "✅ Docker image built and pushed successfully"
                     } else {
                         echo "⚠️ No Dockerfile found - skipping Docker build stage"
-                        echo "To enable Docker builds, add a Dockerfile to your project root"
                     }
                 }
             }
@@ -158,18 +177,17 @@ pipeline {
         stage("Trivy Scan") {
             steps {
                 script {
-                    // Check if Docker image exists locally before scanning
                     if (fileExists('Dockerfile')) {
                         echo "🔍 Running Trivy security scan..."
-                        sh '''
-                            docker run -v /var/run/docker.sock:/var/run/docker.sock \
-                                aquasec/trivy image ${IMAGE_NAME}:latest \
-                                --no-progress \
-                                --scanners vuln \
-                                --exit-code 0 \
-                                --severity HIGH,CRITICAL \
+                        sh """
+                            docker run -v /var/run/docker.sock:/var/run/docker.sock \\
+                                aquasec/trivy image ${IMAGE_NAME}:latest \\
+                                --no-progress \\
+                                --scanners vuln \\
+                                --exit-code 0 \\
+                                --severity HIGH,CRITICAL \\
                                 --format table
-                        '''
+                        """
                         echo "✅ Trivy security scan completed"
                     } else {
                         echo "⚠️ No Docker image available - skipping Trivy scan"
@@ -181,7 +199,6 @@ pipeline {
         stage("Cleanup Artifacts") {
             steps {
                 script {
-                    // Clean up Docker images if they exist
                     if (fileExists('Dockerfile')) {
                         echo "🧹 Cleaning up Docker artifacts..."
                         sh """
