--- a/jenkinsfile
+++ b/jenkinsfile
@@ -49,6 +49,49 @@ pipeline {
             }
         }
 
+        stage("SonarQube Analysis"){
+            steps {
+                script {
+                    withSonarQubeEnv(credentialsId: 'Sonarqube') { 
+                        sh '''
+                            export JAVA_HOME=/usr/lib/jvm/java-21-openjdk
+                            export PATH=$JAVA_HOME/bin:$PATH
+                            
+                            echo "Setting up SonarScanner..."
+                            if ! command -v sonar-scanner &> /dev/null; then
+                                echo "Installing SonarScanner..."
+                                wget -q https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
+                                unzip -q sonar-scanner-cli-4.8.0.2856-linux.zip
+                                export PATH=$PWD/sonar-scanner-4.8.0.2856-linux/bin:$PATH
+                                echo "SonarScanner installed successfully"
+                            else
+                                echo "SonarScanner is already installed"
+                            fi
+                            
+                            echo "Starting SonarQube analysis..."
+                            sonar-scanner \\
+                                -Dsonar.projectKey=register-app \\
+                                -Dsonar.sources=. \\
+                                -Dsonar.host.url=$SONAR_HOST_URL \\
+                                -Dsonar.login=$SONAR_AUTH_TOKEN \\
+                                -Dsonar.coverage.exclusions=**/node_modules/**,**/tests/** \\
+                                -Dsonar.exclusions=**/node_modules/**,**/.*/** \\
+                                -Dsonar.projectName="Register App" \\
+                                -Dsonar.projectVersion=1.0
+                        '''
+                    }
+                }	
+            }
+        }
+
+        stage("Quality Gate"){
+            steps {
+                script {
+                    waitForQualityGate abortPipeline: false, credentialsId: 'Sonarqube'
+                }	
+            }
+        }
+
         stage("Build & Push Container Image") {
             steps {
                 script {
